--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "less": "^3.9.0",
+    "less-loader": "^5.0.0"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
@@ -67,7 +69,7 @@
     "shelljs": "^0.7.6",
     "uglifyjs-webpack-plugin": "^1.1.1",
     "url-loader": "^0.5.8",
-	  "vue": "^2.5.2",
+    "vue": "^2.5.2",
     "vue-router": "^3.0.1",
     "vue-jest": "^1.0.2",
     "vue-loader": "^13.3.0",
