--- a/package.json
+++ b/package.json
@@ -14,72 +14,82 @@
     "build": "node build/build.js"
   },
   "dependencies": {
-    "less": "^3.9.0",
-    "less-loader": "^5.0.0"
+    "body-parser": "^1.19.0",
+    "clean-webpack-plugin": "0.1.19",
+    "cookie-parser": "^1.4.4",
+    "express": "^4.17.1",
+    "express-session": "^1.17.0",
+    "session-memory-store": "^1.0.0"
   },
   "devDependencies": {
-    "autoprefixer": "^7.1.2",
-    "babel-core": "^6.22.1",
-    "babel-eslint": "^8.2.1",
-    "babel-helper-vue-jsx-merge-props": "^2.0.3",
-    "babel-jest": "^21.0.2",
-    "babel-loader": "^7.1.1",
+    "autoprefixer": "7.2.5",
+    "babel-core": "6.26.0",
+    "babel-eslint": "8.2.3",
+    "babel-helper-vue-jsx-merge-props": "2.0.3",
+    "babel-jest": "21.2.0",
+    "babel-loader": "7.1.4",
     "babel-plugin-component": "^1.1.1",
-    "babel-plugin-dynamic-import-node": "^1.2.0",
-    "babel-plugin-syntax-jsx": "^6.18.0",
-    "babel-plugin-transform-es2015-modules-commonjs": "^6.26.0",
-    "babel-plugin-transform-runtime": "^6.22.0",
-    "babel-plugin-transform-vue-jsx": "^3.5.0",
-    "babel-preset-env": "^1.3.2",
-    "babel-preset-stage-2": "^6.22.0",
-    "babel-register": "^6.22.0",
-    "chalk": "^2.0.1",
-    "copy-webpack-plugin": "^4.0.1",
-    "cross-spawn": "^5.0.1",
-    "css-loader": "^0.28.0",
+    "babel-plugin-dynamic-import-node": "1.2.0",
+    "babel-plugin-syntax-jsx": "6.18.0",
+    "babel-plugin-transform-es2015-modules-commonjs": "6.26.2",
+    "babel-plugin-transform-runtime": "6.23.0",
+    "babel-plugin-transform-vue-jsx": "3.7.0",
+    "babel-preset-env": "1.6.1",
+    "babel-preset-stage-2": "6.24.1",
+    "babel-register": "6.26.0",
+    "chalk": "2.4.1",
+    "copy-webpack-plugin": "^4.5.1",
+    "cross-spawn": "5.1.0",
+    "css-loader": "0.28.11",
     "element-ui": "^2.3.9",
-    "eslint": "^4.15.0",
-    "eslint-config-standard": "^10.2.1",
-    "eslint-friendly-formatter": "^3.0.0",
-    "eslint-loader": "^1.7.1",
-    "eslint-plugin-import": "^2.7.0",
-    "eslint-plugin-node": "^5.2.0",
-    "eslint-plugin-promise": "^3.4.0",
-    "eslint-plugin-standard": "^3.0.1",
-    "eslint-plugin-vue": "^4.0.0",
-    "extract-text-webpack-plugin": "^3.0.0",
-    "file-loader": "^1.1.4",
+    "eslint": "4.19.0",
+    "eslint-config-standard": "10.2.1",
+    "eslint-friendly-formatter": "3.0.0",
+    "eslint-loader": "2.1.0",
+    "eslint-plugin-import": "2.11.0",
+    "eslint-plugin-node": "5.2.1",
+    "eslint-plugin-promise": "3.7.0",
+    "eslint-plugin-standard": "3.1.0",
+    "eslint-plugin-vue": "4.5.0",
+    "extract-text-webpack-plugin": "4.0.0-beta.0",
+    "file-loader": "1.1.6",
     "font-awesome": "^4.7.0",
-    "friendly-errors-webpack-plugin": "^1.6.1",
-    "html-webpack-plugin": "^2.30.1",
-    "jest": "^22.0.4",
-    "jest-serializer-vue": "^0.3.0",
-    "jquery": "^1.12.4",
-    "nightwatch": "^0.9.12",
-    "node-notifier": "^5.1.2",
-    "optimize-css-assets-webpack-plugin": "^3.2.0",
-    "ora": "^1.2.0",
-    "portfinder": "^1.0.13",
-    "postcss-import": "^11.0.0",
-    "postcss-loader": "^2.0.8",
-    "postcss-url": "^7.2.1",
-    "rimraf": "^2.6.0",
-    "selenium-server": "^3.0.1",
-    "semver": "^5.3.0",
-    "shelljs": "^0.7.6",
-    "uglifyjs-webpack-plugin": "^1.1.1",
-    "url-loader": "^0.5.8",
-    "vue": "^2.5.2",
-    "vue-router": "^3.0.1",
-    "vue-jest": "^1.0.2",
-    "vue-loader": "^13.3.0",
-    "vue-style-loader": "^3.0.1",
-    "vue-template-compiler": "^2.5.2",
-    "vuex": "^3.0.1",
-    "webpack": "^3.6.0",
-    "webpack-bundle-analyzer": "^2.9.0",
-    "webpack-dev-server": "^2.9.1",
-    "webpack-merge": "^4.1.0"
+    "friendly-errors-webpack-plugin": "1.6.1",
+    "html-webpack-plugin": "3.2.0",
+    "jest": "22.1.4",
+    "jest-serializer-vue": "0.3.0",
+    "jquery": "1.12.4",
+    "less": "3.9.0",
+    "less-loader": "5.0.0",
+    "nightwatch": "0.9.19",
+    "node-notifier": "5.2.1",
+    "optimize-css-assets-webpack-plugin": "3.2.0",
+    "ora": "1.3.0",
+    "portfinder": "1.0.13",
+    "postcss-import": "11.0.0",
+    "postcss-loader": "2.0.10",
+    "postcss-url": "7.3.0",
+    "rimraf": "2.6.2",
+    "selenium-server": "3.8.1",
+    "semver": "5.5.0",
+    "shelljs": "0.7.8",
+    "style-loader": "1.0.0",
+    "uglifyjs-webpack-plugin": "1.1.8",
+    "url-loader": "0.5.9",
+    "vue": "2.5.16",
+    "vue-jest": "1.4.0",
+    "vue-loader": "14.2.2",
+    "vue-router": "3.0.1",
+    "vue-style-loader": "3.1.2",
+    "vue-template-compiler": "2.5.16",
+    "vuex": "3.1.1",
+    "webpack": "4.0.0",
+    "webpack-bundle-analyzer": "2.11.1",
+    "webpack-cli": "2.1.2",
+    "webpack-dev-middleware": "2.0.6",
+    "webpack-dev-server": "3.1.0",
+    "webpack-hot-middleware": "2.25.0",
+    "webpack-merge": "4.1.2"
   },
   "engines": {
     "node": ">= 6.0.0",
