--- a/package.json
+++ b/package.json
@@ -41,7 +41,6 @@
     "copy-webpack-plugin": "^4.5.1",
     "cross-spawn": "5.1.0",
     "css-loader": "0.28.11",
-    "element-ui": "^2.3.9",
     "eslint": "4.19.0",
     "eslint-config-standard": "10.2.1",
     "eslint-friendly-formatter": "3.0.0",
@@ -83,6 +82,7 @@
     "vue-style-loader": "3.1.2",
     "vue-template-compiler": "2.5.16",
     "vuex": "3.1.1",
+    "view-design": "4.0.1",
     "webpack": "4.0.0",
     "webpack-bundle-analyzer": "2.11.1",
     "webpack-cli": "2.1.2",
