--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   },
   "devDependencies": {
     "autoprefixer": "7.2.5",
+    "axios": "0.19.0",
     "babel-core": "6.26.0",
     "babel-eslint": "8.2.3",
     "babel-helper-vue-jsx-merge-props": "2.0.3",
