--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
     "body-parser": "^1.19.0",
     "clean-webpack-plugin": "0.1.19",
     "cookie-parser": "^1.4.4",
-    "express": "^4.17.1",
+    "express": "4.17.1",
     "express-session": "^1.17.0",
-    "session-memory-store": "^1.0.0"
+    "mysql": "2.17.1",
+    "session-memory-store": "^1.0.0",
+    "uuid": "3.3.3"
   },
   "devDependencies": {
     "autoprefixer": "7.2.5",
