--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "cookie-parser": "^1.4.4",
     "express": "4.17.1",
     "express-session": "^1.17.0",
+    "mavon-editor": "^2.7.7",
     "mysql": "2.17.1",
     "session-memory-store": "^1.0.0",
     "uuid": "3.3.3"
